tests/dataset/tpc-ds/compiler/erlang/q52.erl
#!/usr/bin/env escript
% Generated by Mochi compiler v0.10.26 on 2020-01-02T15:04:05Z
% q52.erl - generated from q52.mochi

main(_) ->
    Store_sales = [#{item => 1, sold_date => 1, price => 10}, #{item => 2, sold_date => 1, price => 22}, #{item => 1, sold_date => 1, price => 20}],
    Item = [#{i_item_sk => 1, i_brand_id => 1, i_brand => "B1", i_manager_id => 1}, #{i_item_sk => 2, i_brand_id => 2, i_brand => "B2", i_manager_id => 1}],
    Date_dim = [#{d_date_sk => 1, d_year => 2001, d_moy => 11}],
    Filtered = [#{d_year => mochi_get(year, Key0), brand_id => mochi_get(brand_id, Key0), ext_price => lists:sum([mochi_get(price, X) || X <- Val0])} || {Key0, Val0} <- maps:to_list(lists:foldl(fun({Key0, Val0}, Acc0) -> L = maps:get(Key0, Acc0, []), maps:put(Key0, [Val0 | L], Acc0) end, #{}, [{#{year => mochi_get(d_year, D), brand_id => mochi_get(i_brand_id, I), brand => mochi_get(i_brand, I)}, #{ss => Ss, i => I, d => D}} || Ss <- Store_sales, I <- Item, D <- Date_dim, ((mochi_get(item, Ss) == mochi_get(i_item_sk, I)) andalso (mochi_get(i_manager_id, I) == 1)), (((mochi_get(sold_date, Ss) == mochi_get(d_date_sk, D)) andalso (mochi_get(d_year, D) == 2001)) andalso (mochi_get(d_moy, D) == 11))]))],
    Result = [V || {_, V} <- lists:keysort(1, [{[mochi_get(d_year, R), -mochi_get(ext_price, R), mochi_get(brand_id, R)], R} || R <- Filtered])],
    mochi_json(Result),
    (case (Result == [#{d_year => 2001, brand_id => 1, ext_price => 30}, #{d_year => 2001, brand_id => 2, ext_price => 22}]) of true -> ok; _ -> erlang:error(test_failed) end).

mochi_get(K, M) ->
    case maps:find(K, M) of
        {ok, V} -> V;
        error ->
            Name = atom_to_list(K),
            case string:tokens(Name, "_") of
                [Pref|_] ->
                    P = list_to_atom(Pref),
                    case maps:find(P, M) of
                        {ok, Sub} when is_map(Sub) -> maps:get(K, Sub);
                        _ -> erlang:error({badkey, K})
                    end;
                _ -> erlang:error({badkey, K})
            end
        end.
    
    mochi_escape_json([]) -> [];
    mochi_escape_json([H|T]) ->
        E = case H of
            $\ -> "\\";
            $" -> "\"";
            _ -> [H]
        end,
        E ++ mochi_escape_json(T).
    
    mochi_to_json(true) -> "true";
    mochi_to_json(false) -> "false";
    mochi_to_json(V) when is_integer(V); is_float(V) -> lists:flatten(io_lib:format("~p", [V]));
    mochi_to_json(V) when is_binary(V) -> "\"" ++ mochi_escape_json(binary_to_list(V)) ++ "\"";
    mochi_to_json(V) when is_list(V), (V =:= [] orelse is_integer(hd(V))) -> "\"" ++ mochi_escape_json(V) ++ "\"";
    mochi_to_json(V) when is_list(V) -> "[" ++ lists:join(",", [mochi_to_json(X) || X <- V]) ++ "]";
    mochi_to_json(V) when is_map(V) -> "{" ++ lists:join(",", ["\"" ++ atom_to_list(K) ++ "\":" ++ mochi_to_json(Val) || {K,Val} <- maps:to_list(V)]) ++ "}".
    
    mochi_json(V) -> io:format("~s
", [mochi_to_json(V)]).
